tests/rosetta/transpiler/Racket/add-a-variable-to-a-class-instance-at-runtime.error
run error: exit status 1
member: not a proper list
  in: '#hash(("" . ""))
  context...:
   /workspace/mochi/tests/rosetta/transpiler/Racket/add-a-variable-to-a-class-instance-at-runtime.rkt:47:0
   body of "/workspace/mochi/tests/rosetta/transpiler/Racket/add-a-variable-to-a-class-instance-at-runtime.rkt"
Create two fields at runtime: 

  Field #1:

       Enter name  : 
       Enter value : 


  Field #2:

       Enter name  : 
       Enter value : 


Which field do you want to inspect ? 
